Feat: Adds solution to task 07

--- a/07-computed-and-methods/index.html
+++ b/07-computed-and-methods/index.html
@@ -25,18 +25,22 @@
       <table>
         <thead>
           <tr>
-            <th v-for="column in columnHead" :key="columnHead">
+            <th v-for="column in renderTablehead" :key="column">
               {{ column }}
             </th>
           </tr>
         </thead>
         <tbody>
-          <tr v-for="{ title, isbn, author, publisher, price, numPages } of books" :key="isbn">
+          <tr v-for="{ title, isbn, author, publisher, price, numPages } of filterBooks" :key="isbn">
             <td>{{ title }}</td>
             <td>{{ isbn }}</td>
             <td>{{ author }}</td>
             <td>{{ publisher }}</td>
-            <td><span class="strike">{{ price }}</span></td>
+            <td>
+              <div><span class="strike">{{ price }}</span></div>
+              <div><span>{{ applyDiscountToPrice(price) }}</span></div>
+            </td>
+            </td>
             <td>{{ numPages }}</td>
           </tr>
         </tbody>
